--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Is this working?</h1>
+    <h1>Hello there, this is just a test 😉</h1>
   </body>
 </html>
